Custom--app/main/default/objects/Issues_New_Feature_Request__c/Issues_New_Feature_Request__c.object-meta.xml
<CustomObject>
    <description>Used internally by the sf.com team to manage the change control process.  (SIR)</description>
    <label>System Issue Report</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Issue Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>