Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Actual_QA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_QA_Hours__c</fullName>
    <label>Actual: QA Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>