Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Actual_Rollout__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rollout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Rollout</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SI_Rollout__c.Release_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.CreatedDate</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SI_Rollout__c</referenceTo>
    <relationshipLabel>System Issue Reports-Actually Deployed</relationshipLabel>
    <relationshipName>System_Issue_Reports_Actual</relationshipName>
    <type>Lookup</type>
</CustomField>