Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Actual_Rollout_Text__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rollout_Text__c</fullName>
    <formula>Actual_Rollout__r.Name</formula>
    <label>Actual Rollout (Text)</label>
    <type>Text</type>
</CustomField>