Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Actual_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Hours__c</fullName>
    <formula>Actual_Design_Hours__c +  Actual_Config_Hours__c +  Actual_Coding_Hours__c +  Actual_QA_Hours__c +  Actual_Data_Import_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual: Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>