Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <description>Field to hold the Id of the associated DCR.  The ID of this field is used in the Create SIR button on Concierge.</description>
    <label>ChildObject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>