Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Collaborator_1__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>