Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Collaborator_2__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>