Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Commit_URL__c.field-meta.xml
<CustomField>
    <fullName>Commit_URL__c</fullName>
    <inlineHelpText>Enter the github commit URL. Ex: https://github.com/InvitationHomes/ihd/commit/d7fc708c0ab0bc48210a8538c2c75ce8070cb745</inlineHelpText>
    <label>Commit URL</label>
    <type>Url</type>
</CustomField>