Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>