Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Date_Declined__c.field-meta.xml
<CustomField>
    <fullName>Date_Declined__c</fullName>
    <label>Date Declined</label>
    <type>Date</type>
</CustomField>