Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Date_Estimated_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_Estimated_Completion__c</fullName>
    <label>Date Estimated Completion</label>
    <type>Date</type>
</CustomField>