Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Date_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Date_In_Process__c</fullName>
    <label>Date In Process</label>
    <type>Date</type>
</CustomField>