Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Date_Submitted_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Review__c</fullName>
    <label>Date Submitted for Review</label>
    <type>Date</type>
</CustomField>