Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Please provide as much detail about the issue or new feature requested as possible.  For faster resolution, it is critical you describe, where possible, the tab, layout section header and field name pertinent to your request.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>