Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Dev_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Dev_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports6</relationshipName>
    <type>Lookup</type>
</CustomField>