Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Development_Environment__c.field-meta.xml
<CustomField>
    <fullName>Development_Environment__c</fullName>
    <label>Development Environment</label>
    <length>32</length>
    <type>Text</type>
</CustomField>