Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Development_Notes__c.field-meta.xml
<CustomField>
    <fullName>Development_Notes__c</fullName>
    <label>Development Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>