Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>Development_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports5</relationshipName>
    <type>Lookup</type>
</CustomField>