Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Development_Phase__c.field-meta.xml
<CustomField>
    <fullName>Development_Phase__c</fullName>
    <label>Development Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beta Development</fullName>
            </value>
            <value>
                <fullName>Phase I</fullName>
            </value>
            <value>
                <fullName>Phase II</fullName>
            </value>
            <value>
                <fullName>Phase III</fullName>
            </value>
            <value>
                <fullName>Phase IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>