Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Estimated_Config_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Config_Hours__c</fullName>
    <label>Estimated: Config Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>