Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Estimated_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Hours__c</fullName>
    <formula>Estimated_Design_Hours__c +  Estimated_Config_Hours__c  +  Estimated_Coding_Hours__c +  Estimated_QA_Hours__c +  Estimated_Data_Import_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated: Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>