Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Favorite__c.field-meta.xml
<CustomField>
    <fullName>Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created for Melanie's use in quickly identify frequently referred to SIRs.</description>
    <label>Favorite</label>
    <type>Checkbox</type>
</CustomField>