Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/File_Storage_Alias__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Alias__c</fullName>
    <formula>Task_Name__c</formula>
    <label>File Storage Alias</label>
    <type>Text</type>
</CustomField>