Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Hours_to_Complete_Actual__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Complete_Actual__c</fullName>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>