Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Implementation_Approach__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Approach__c</fullName>
    <label>Implementation Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>