Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Internal_Admin_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Admin_Notes__c</fullName>
    <label>Internal Admin Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>