Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/My_SIR__c.field-meta.xml
<CustomField>
    <fullName>My_SIR__c</fullName>
    <formula>IF( $User.Full_Name__c  =  Project_Owner__r.Full_Name__c , 'Yes',
IF( $User.Full_Name__c  =   CreatedBy.Full_Name__c  , 'Yes',
IF( $User.Full_Name__c  =    Development_Owner__r.Full_Name__c   , 'Yes',
IF( $User.Full_Name__c  =     Owner:User.Full_Name__c    , 'Yes',
 'No'))))</formula>
    <label>My SIR</label>
    <type>Text</type>
</CustomField>