Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <type>TextArea</type>
</CustomField>