Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Parent_SIR__c.field-meta.xml
<CustomField>
    <fullName>Parent_SIR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent SIR</label>
    <referenceTo>Issues_New_Feature_Request__c</referenceTo>
    <relationshipLabel>Child SIRs</relationshipLabel>
    <relationshipName>Child_SIRs</relationshipName>
    <type>Lookup</type>
</CustomField>