Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party DK Enhancements</fullName>
            </value>
            <value>
                <fullName>3rd Party SF User Integration</fullName>
            </value>
            <value>
                <fullName>Accounts/Contacts</fullName>
            </value>
            <value>
                <fullName>ACQ - Acquisition Approval-Reporting</fullName>
            </value>
            <value>
                <fullName>ACQ - Acquisition Assumptions</fullName>
            </value>
            <value>
                <fullName>ACQ - AZ Bidder Integration</fullName>
            </value>
            <value>
                <fullName>ACQ - Bidding Statistics and Acq Reporting Obj</fullName>
            </value>
            <value>
                <fullName>ACQ - Broker Site Integration</fullName>
            </value>
            <value>
                <fullName>ACQ - General</fullName>
            </value>
            <value>
                <fullName>ACQ - Pipeline</fullName>
            </value>
            <value>
                <fullName>ACQ - Prospect</fullName>
            </value>
            <value>
                <fullName>ACQ - Prospect - Pipeline - Portfolio object field conversion</fullName>
            </value>
            <value>
                <fullName>Acquisition Analysis</fullName>
            </value>
            <value>
                <fullName>Acquisition Assumptions</fullName>
            </value>
            <value>
                <fullName>Address Validation</fullName>
            </value>
            <value>
                <fullName>BI Integration</fullName>
            </value>
            <value>
                <fullName>Box Integration</fullName>
            </value>
            <value>
                <fullName>Cash Flow Statement Build</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Data Change Request Utility</fullName>
            </value>
            <value>
                <fullName>Documentation of Processes</fullName>
            </value>
            <value>
                <fullName>G2 Maps Configuration</fullName>
            </value>
            <value>
                <fullName>Geopointe</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Legal / Claims Tracking</fullName>
            </value>
            <value>
                <fullName>Nitro Integration - Phase I (Rehab)</fullName>
            </value>
            <value>
                <fullName>Nitro Integration - Phase II</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>