Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Pushed_to_Github__c.field-meta.xml
<CustomField>
    <fullName>Pushed_to_Github__c</fullName>
    <label>Pushed to Github?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>