Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/QA_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Notes__c</fullName>
    <label>QA Review Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>