Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/QA_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Status__c</fullName>
    <inlineHelpText>When first creating a SIR, do not enter a value in this field.  The QA Reviewer will populate this value later in the process.</inlineHelpText>
    <label>QA Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Ready for UAT Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>