Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/QA_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>QA_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports4</relationshipName>
    <type>Lookup</type>
</CustomField>