Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Release_Date_from_Actual_Rollout__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_from_Actual_Rollout__c</fullName>
    <formula>IF( NOT( ISBLANK(Actual_Rollout__r.Release_Date__c)) , Actual_Rollout__r.Release_Date__c, Rollout__r.Release_Date__c )</formula>
    <label>Release Date (from Actual Rollout)</label>
    <type>Date</type>
</CustomField>