Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <inlineHelpText>Description of changes for end users</inlineHelpText>
    <label>Release Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>