Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Required_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Completion_Date__c</fullName>
    <label>Required Completion Date</label>
    <type>Date</type>
</CustomField>