Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <description>Notes from Reviewer</description>
    <label>UAT Review Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>