Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UAT Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>