Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>