Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Self_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Service</label>
    <type>Checkbox</type>
</CustomField>