Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>