Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Smoke_Test__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Test__c</fullName>
    <label>Smoke Test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>