Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Smoke_Test_Profile__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Test_Profile__c</fullName>
    <inlineHelpText>Profile(s) of user with which to run the Smoke Test</inlineHelpText>
    <label>Smoke Test Profile</label>
    <length>64</length>
    <type>Text</type>
</CustomField>