Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Status_Composite__c.field-meta.xml
<CustomField>
    <fullName>Status_Composite__c</fullName>
    <formula>IF(AND 
(ISPICKVAL(Status__c, "In Development"), 
NOT(ISBLANK((TEXT(Development_Status__c))))), 
"In Development" + " " + "-" + " " + TEXT(Development_Status__c), 

IF(AND 
(ISPICKVAL(Status__c, "In Development"), 
ISBLANK((TEXT(Development_Status__c)))), 
"In Development", 

IF(AND 
(ISPICKVAL(Status__c, "In Testing"), 
ISBLANK((TEXT(QA_Review_Status__c)))), 
"In Testing" + " " + "-" + " " + "QA", 

IF(AND 
(ISPICKVAL(Status__c, "In Testing"), 
ISPICKVAL(QA_Review_Status__c, "Ready for UAT Review"),
NOT(ISBLANK(TEXT(UAT_Review_Status__c)))),
"In Testing" + " " + "-" + " " + "UAT" + " " + TEXT( UAT_Review_Status__c),

IF(AND 
(ISPICKVAL(Status__c, "In Testing"), 
ISPICKVAL(QA_Review_Status__c, "Ready for UAT Review"),
ISBLANK(TEXT(UAT_Review_Status__c)),
ISBLANK( Reviewer__c )),
"In Testing" + " " + "-" + " " + "Ready for UAT Review", 

IF(AND 
(ISPICKVAL(Status__c, "In Testing"), 
ISPICKVAL(QA_Review_Status__c, "Ready for UAT Review"),
ISBLANK(TEXT(UAT_Review_Status__c)),
NOT(ISBLANK( Reviewer__c ))),
"In Testing" + " " + "-" + " " + "UAT",

IF(AND 
(ISPICKVAL(Status__c, "In Testing"), 
(TEXT(QA_Review_Status__c)  &lt;> "Ready for UAT Review")), 
"In Testing" + " " + "-" + " " + "QA" + " " + TEXT(QA_Review_Status__c), 

IF(AND 
(ISPICKVAL(Status__c, "Accepted"), 
ISBLANK(Actual_Rollout__c)), 
"Accepted" + " " + "-" + " " + "Ready for PROD Deploy", 

IF(AND 
(ISPICKVAL(Status__c, "Accepted"), 
NOT(ISBLANK(Actual_Rollout__c))), 
"Accepted" + " " + "-" + " " + "Ready for PROD Review", 


TEXT(Status__c))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Composite</label>
    <type>Text</type>
</CustomField>