Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/System_Category__c.field-meta.xml
<CustomField>
    <fullName>System_Category__c</fullName>
    <label>System Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Data change tracker</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Field configuration</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Issue/Feature Tracker</fullName>
            </value>
            <value>
                <fullName>Layouts</fullName>
            </value>
            <value>
                <fullName>List Views/Queries</fullName>
            </value>
            <value>
                <fullName>Maps</fullName>
            </value>
            <value>
                <fullName>Object formula building</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboards</fullName>
            </value>
            <value>
                <fullName>Roles/Profiles</fullName>
            </value>
            <value>
                <fullName>State Assumptions</fullName>
            </value>
            <value>
                <fullName>Status Tags</fullName>
            </value>
            <value>
                <fullName>Test Methods</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>Visual Force</fullName>
            </value>
            <value>
                <fullName>Web site/HTML 5</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>Yardi Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>