Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Targeted_Development_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Development_Completion_Date__c</fullName>
    <label>Targeted Development Completion Date</label>
    <type>Date</type>
</CustomField>