Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>