Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Issue_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>