Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Test_Case_Attached__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Case Attached</label>
    <type>Checkbox</type>
</CustomField>