Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Test_Plan_Attached__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically set when a QA Test plan is attached via S3</inlineHelpText>
    <label>Test Plan Attached</label>
    <type>Checkbox</type>
</CustomField>