Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Request</fullName>
                <default>true</default>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>System Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>