Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/UAT_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>UAT_Review_Status__c</fullName>
    <label>UAT Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>