Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Unit_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Test Cases</label>
    <type>Checkbox</type>
</CustomField>