Custom--app/main/default/objects/Issues_New_Feature_Request__c/fields/Unresolved_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Unresolved_Bugs__c</fullName>
    <label>Unresolved Bugs</label>
    <summaryFilterItems>
        <field>SI_Bug__c.Status__c</field>
        <operation>equals</operation>
        <value>Open, Fixed, Re-Opened</value>
    </summaryFilterItems>
    <summaryForeignKey>SI_Bug__c.System_Issue_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>