Custom--app/main/default/objects/Issues_New_Feature_Request__c/validationRules/Validate_Commit_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Commit_URL</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISPICKVAL(Pushed_to_Github__c, 'Yes'),
	ISBLANK(Commit_URL__c)
)</errorConditionFormula>
    <errorDisplayField>Commit_URL__c</errorDisplayField>
    <errorMessage>You must enter Github commit  URL.</errorMessage>
</ValidationRule>